--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url("images/Road.jpg");
+    background-image: url("images/road.jpg");
     background-size:cover;
     color: #ffffff;
 }
@@ -19,4 +19,8 @@ body {
     bottom: 0;
     width: 100%;
     height: 60px;
+}
+
+.smallpic {
+    width:100%;
 }
