--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
     padding-top: 50px;
-    padding-bottom: 60px;
+    padding-bottom: 50px;
 }
 
 .jumbotron {
@@ -14,13 +14,22 @@ body {
     color: #ffffff;
 }
 
+.row {
+	margin-bottom: 25px;
+}
+
 .footer {
+	color: #777;
+	background-color: #f0f0f0;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 50px;
 }
 
 .smallpic {
+    margin-left: auto;
+    margin-right: auto;
     width:100%;
+    max-width: 50vh;
 }
