--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
 	margin-bottom: 25px;
 }
 
+/* .col-md-4:hover, col-md-4:focus {
+	box-shadow: 3px 3px 3px #888888;
+    border-radius: 25px;
+    border: 1px solid #f0f0f0;
+} */
+	
 .footer {
 	color: #777;
 	background-color: #f0f0f0;
