--- a/style.css
+++ b/style.css
@@ -33,9 +33,15 @@ body {
     height: 50px;
 }
 
-.smallpic {
+.img-thumbnail {
     margin-left: auto;
     margin-right: auto;
     width:100%;
     max-width: 50vh;
+}
+
+#galileo {
+    margin-left: auto;
+    margin-right: auto;
+	max-width: 200px;
 }
