--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     padding-bottom: 50px;
 }
 
+form {
+  right: 10px;
+  top: 10px;
+}
+
 .jumbotron {
     background-image: url("images/road.jpg");
     background-size:cover;
@@ -49,7 +54,17 @@ body {
     max-width: 50vh;
 }
 
+.leaflet-control-layers-expanded {
+	font-family: sans-serif;
+    padding-left: 15px;
+    padding-bottom: 15px;
+}
 
+#map {
+    min-height: 500px;
+	height: 98%;
+	width: 100%;
+}		    
 
 #galileo {
     margin-left: auto;
@@ -70,3 +85,5 @@ body {
 #mySched8224:hover {
   opacity: 0.9;
 }
+
+
