--- a/style.css
+++ b/style.css
@@ -32,11 +32,10 @@ form {
     padding-bottom: 5px;
 }
 
-/* .col-md-4:hover, col-md-4:focus {
-	box-shadow: 3px 3px 3px #888888;
-    border-radius: 25px;
-    border: 1px solid #f0f0f0;
-} */
+/*.btn {
+	background: #0D4F8B;
+	color: #ffffff;
+}*/
 	
 .footer {
 	color: #777;
