--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
 
 body {
     padding-top: 50px;
+    background-image: url("images/background.png");
+    background-attachment:fixed;
 /*    padding-bottom: 50px; */
 }
 
@@ -14,7 +16,7 @@ form {
 }
 
 .jumbotron {
-	background-color: #0D4F8B;
+	background-color: #12B2A7;
     background-size:cover;
     color: #ffffff;
 }
@@ -36,7 +38,20 @@ form {
 	background: #0D4F8B;
 	color: #ffffff;
 }*/
-	
+
+.content {
+    min-height:20px;
+    width: 90%;
+    padding:19px;
+    margin-top: 10px;
+    margin-bottom:20px;
+    background-color:#ffffff;
+    border:1px solid #e3e3e3;
+    border-radius:4px;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
+}
+
 .footer {
 	color: #777;
 	background-color: #f0f0f0;
