--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ form {
 .content {
     min-height:20px;
     width: 90%;
-    padding:19px;
+    padding:15px;
+    padding-top: 30px;
     margin-top: 10px;
     margin-bottom:20px;
     background-color:#ffffff;
